<package format="2">
  <name>pva_tracker</name>
  <version>1.0.0</version>
  <description>
    <p>track pva given by path planner</p>
    <p>This package </p>
  </description>
  <author>Clarence</author>
  <maintainer email="947089399@qq.com" />
  <license>BSD 3-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>
